# Workmate-test-task

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_aggregate.py  test_arguments.py  test_where.py
